# lightningpy

./: .gitignore  .readthedocs.yml  NGC337_psi_sample_NS.npy  README.md  demo.ipynb  environment.yml  fit_J033226_demo.ipynb  fit_ngc337_demo.ipynb  fit_ngc337_demo_ultranest.ipynb  fit_ngc628_demo.ipynb  fit_qsosed_sim_demo.ipynb  fit_sim_AGN_demo.ipynb  fit_sim_demo.ipynb  fit_xray_sim_demo.ipynb  fit_xray_sim_demo_counts.ipynb  pyproject.toml  ultranest_comparison.ipynb
.github/workflows/: python-package.yml
docs/: build_docs.sh
docs/source/: API_reference.rst  catalog_postprocessing.rst  conf.py  examples.rst  faq.rst  filter_profiles.rst  filter_table.csv  getting_started.ipynb  getting_started.rst  index.rst  installation.rst  model_choice.rst  model_library.rst  nebular_emission_recipe.rst  solver_choice.rst
examples/model_demos/: README.md  agn.ipynb  dust.ipynb  stellar.ipynb  stellar_BPASS_cloudy.ipynb  stellar_bpass.ipynb  stellar_pegase.ipynb  stellar_pegase_cloudy.ipynb
examples/notebooks/: BPASS_comparison_ngc337.ipynb  J033226_AGN_fit.ipynb  NGC5728_agn_fit.ipynb  basic_fit_ngc337.ipynb  fit_ngc337_demo.ipynb  fit_ngc628_demo.ipynb  fit_qsosed_sim_demo.ipynb  ngc337_mle_res.h5  (+16 more)
lightning/: __init__.py  agn.py  base.py  dust.py  get_filters.py  lightning.py  postprocessing.py  ppc.py  priors.py  sfh.py  stellar.py
tests/: README.md  fit_AGN.py  fit_BPASS.py  fit_PEGASE.py  fit_burst.py  postprocess.py  run_tests.sh  simulate.py  simulate_lines.py  test_agn.py  test_atten.py  test_bpass.py  test_dust.py  test_lightning.py  test_pegase.py  test_sfh.py  test_xray_agn.py  test_xray_stellar.py
(+105 files in other folders)
